    - Mazes completely removed from Gehennom!  Both fill levels and filler
      around special levels consist of lava caverns.
    - Add demon lairs for Demogorgon, Geryon, Dispater, and Yeenoghu (from
      GruntHack).
* Changes to the Town branch:
    - Nymph level is now guaranteed and appears between the Town surface and
      filler levels.
    - Town surface level has larger shops.
* Sokoban prizes moved to Mines End; the end of Sokoban now has a guaranteed
  sack containing 8 rings and wands (the ring and wand on each level has been
  removed as a result).  This makes Sokoban much more optional in DynaHack than
  it is in NetHack.
* Remove lava from one of the versions of the Castle level.
* Levels between Medusa's Island and the Castle are now water caverns instead of
  lava caverns, and have less evil monsters.
* Allow magic mapping of the Valley of the Dead and the last Dragon Caves level.
* Iron bars can be dissolved by acid (from UnNetHack).
* Destroying iron bars in Sokoban counts against its shortcut conduct.
* Drawbridge instant death removed: drawbridges can only be destroyed by force
  bolts when closed, not open.
* Prevent magic traps from being created above dungeon level 5.
* Fix the cosmetic issue of horizontally-flipped levels appearing slightly
  misaligned in the map area.
* Fix waking monsters level-wide when entering courts, swamps, morgues, zoos and
  nymph gardens for the first time without stealth; only monsters in the room
  being entered have a chance to to be woken.

Items
-----
* More formal identification for item under certain circumstances:
    - Formal ID tin whistles and magic whistles when used.
    - Formal ID magic flutes and magic harps when used.
    - Formal ID enchant armor scrolls when they turn dragon scales into dragon
      scale mail.
* Guarantee a wand of cancellation in the Castle chest that can be used for
  blanking scrolls and potions.
* Fix C343-146: "Unseen wand of striking becomes known if zapped by unseen