@@ -84,6 +84,10 @@ Dungeon
     - Nymph level is now guaranteed and appears between the Town surface and
       filler levels.
     - Town surface level has larger shops.
+* Changes to Vlad's Tower:
+    - New entrance level to Vlad's Tower with trees, water, vampires, zombies,
+      ravens and a drawbridge entrance leading to the traditional tower levels
+      (from dNetHack).
 * Sokoban prizes moved to Mines End; the end of Sokoban now has a guaranteed
   sack containing 8 rings and wands (the ring and wand on each level has been
   removed as a result).  This makes Sokoban much more optional in DynaHack than
